# socra-python

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: _release.yml  ci.yml  on_push.yml
__tests__/: test_decisions.py  test_files.py
__tests__/schemas/: test_messages.py  test_prompts.py
docs/: Dockerfile  Makefile  astro.config.mjs  conf.py  index.rst  installation.rst  make.bat  package-lock.json  package.json  poetry.md  usage.rst
docs-legacy/: poetry.md
docs/src/content/docs/: index.mdoc  introduction.mdoc
docs/src/styles/: custom.css
socra/: __init__.py  cli.py  constants.py  context.py  decisions.py
socra/actions/: __init__.py  base.py
socra/actions/files/: modify_file.py  should_update.py
socra/actions/folders/: choose_mutation.py
socra/actions/llm/: single_shot.py
socra/agents/: __init__.py  agent_decision.py  base.py  context.py
socra/agents/await_input/: action.py  agent.yml
socra/agents/file_system/: actions.py  agent.py
socra/agents/user_interaction/: actions.py  agent.py
socra/commands/: command.py  describe.py  improve.py
socra/completions/: __init__.py  base.py  completion_response.py  usage.py
socra/core/: llm.py  messages.py  prompt.py
socra/files/: __init__.py  file.py  folder.py
socra/io/: __init__.py  files.py
socra/messages/: __init__.py  base.py
socra/models/: __init__.py  base.py
socra/nodes/: __init__.py  node.py
socra/nodes/actions/: add_child.py  content_update.py  root.py
socra/parsers/: __init__.py
socra/prompts/: __init__.py  base.py
socra/sandbox/: CoolComponent.tsx  example.py  hello_world.py  random.py
socra/schemas/: __init__.py  base.py
socra/utils/: decorators.py  spinner.py
tests/: __init__.py  test_commands.py  test_pytest.py  test_socra.py
