[tool.poetry]
name = "socra"
version = "0.0.2"
description = "The official Python library of socra AI"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
openai = "^1.51.1"
langchain = "^0.3.2"
langchain-openai = "^0.2.2"
langchain-community = "^0.3.1"
langchain-anthropic = "^0.2.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
socra = "socra.cli:cli"


[virtualenvs]
# allows us to create virtual env in project root - allows VS Code to detect the virtual env
in-project = true
