[tool.poetry]
name = "socra"
version = "0.0.8"
description = "The official Python library of socra AI"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
openai = "^1.35.13"
langchain = "^0.2.7"
langchain-anthropic = "^0.1.19"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.14"
pydantic = "^2.9.2"
tiktoken = "^0.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.lint.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
socra = "socra.cli:cli"


[virtualenvs]
# allows us to create virtual env in project root - allows VS Code to detect the virtual env
in-project = true
